ajout d'un css basique

--- a/html/boule.html
+++ b/html/boule.html
@@ -1,7 +1,14 @@
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="theme.css">
+</head>
 <body>
 <h1>LA BOULE MAGIQUE</h1>
 
-<img src="https://pbs.twimg.com/profile_images/509033596804268032/FYSJikQw.jpeg" alt="texte" />
+<p>
+    <img src="https://pbs.twimg.com/profile_images/509033596804268032/FYSJikQw.jpeg" alt="texte" />
+    et oui Marise
+</p>
+
 </body>
 </html>
